Examples/test-suite/errors/cpp_template_repeat.i
%module xxx

template<class T> T blah(T x) { };

%template(iblah) blah<int>;
%template(iiblah) blah<int>;

